kubernetes/apps/media/tautulli/app/httproute-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli-external
spec:
  hostnames:
    - "${SECRET_TAUTULLI_SUBDOMAIN}.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: tautulli
          namespace: media
          port: ${APP_PORT}
